# omniclaw

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE_AUDIT.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPLOYMENT_GUIDE.md  Dockerfile  INSTALLATION.md  ISSUES.md  LICENSE  OmniClaw_Colab_Sandbox.ipynb  PROJECT_SUMMARY.md  README.md  SECURITY.md  USE_CASES.md  cli.py  config.example.yaml  config.pro.yaml  deployment_v2.md  docker-compose.yml  error.txt  evolution_config.yaml  hive_config.yaml  index_old.html  index_old_utf8.html  install.sh  mobile_audit.txt  omniclaw.py  omniclaw_mcp.py  orchestrator.py  package.json  pair_test.md  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  requirements-sos.txt  requirements.txt  scout_config.yaml  (+4 more)
.github/workflows/: ci.yml  install-test.yml
Shanon Pro/: INTEGRATION_SUMMARY.md  README.md  docker-compose.yml  package.json
Shanon Pro/docs/: SYSTEM_ARCHITECTURE.md
acoustic_sidechannel_service/: main.py
agents/: adversarial_refiner.py  contextual_fuzzer.py  disclosure_engine.py  poc_validator.py
apps/cli/: README.md  package-lock.json  package.json  tsdown.config.ts
apps/web/: package.json  pnpm-lock.yaml
apps/worker/: index.ts
config/: otel-collector.yml  policy.yaml  prometheus.yml  workers.yaml
connectors/: mcp_host.py
core/: __init__.py  api_pool.py  arbitrator.py  audit_diff.py  autonomous_fix.py  companion.py  context_mapper.py  dashboard.py  decision_archaeology.py  echo_chambers.py  evolution_agent.py  hardware_monitor.py  health_server.py  hive_sync.py  kill_switch.py  knowledge_graph.py  living_docs.py  llm_council.py  main.py  manager.py  memory.py  messaging_gateway.py  orchestrator.py  pattern_sentinel.py  quantum_gateway.py  reasoning_config.py  resource_utils.py  scout_agent.py  semantic_diff.py  temporal_memory.py  temporal_memory_v2.py  vector_sync.py  voice_wake.py  worker.py  zmq_orchestrator.py
core/advanced_features/: README.md  __init__.py  autonomous_pm.py  biometric_vibe.py  code_dna.py  contract_enforcer.py  future_tech_explorer.py  launcher.py  living_diagram.py  paradigm_translator.py  predictor.py  recommendation_engine.py  requirements.txt  security_research.py  self_evolving_core.py  time_machine.py  web_interface.py
core/automation/: __init__.py  browser_agent.py  bug_bounty.py
core/intelligence/: war_room.py
core/red_team/: __init__.py  auto_disclosure_agent.py  base_worker.py  context_aware_fuzzer.py  controller.py  evidence_collector.py  idor_fuzzer_v1.py  node_worker.js  prompt_injector.py  prompt_injector_mutator.py  recon_worker.py  remediation_pipeline.py  report_synthesizer.py  responsible_disclosure.py  stealth_orchestrator.py  tor_hive.py
core/scheduler/: __init__.py  cron.py  heartbeat.py
core/security/: __init__.py  doctor.py  file_guard.py  ips_agent.py  prompt_guard.py  risk_engine.py  secure_config.py  session_budget.py  shell_sandbox.py  yubikey_manager.py
core/skills/: __init__.py  injection_auditor.py  loader.py  osint_reputation.py  osint_sentiment.py  payloads.json  registry.py  social_spider.py  wifi_recon.py
deploy/systemd/: raw-agent.service
docs/: architecture.md  setup.md  use_cases.md
engines/correlation/: __init__.py  correlation_engine.py  exploit_queue.py  postgres_client.py  priority_scorer.py  reachability.py
engines/dynamic-agent/: main.py
engines/recon/: main.py
engines/static-slicer/: main.py
execution_service/: main.py
kernel_bridge/: IPS_README.md  Makefile  ebpf_monitor.py  python_bridge.py  segfault_tracer.py  user_daemon.cpp
kernel_bridge/ebpf/: forensic_snapshot.c
kernel_observer/: main.py
messaging_gateway/: main.py
mission-control/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
mission-control/src/: App.tsx  index.css
mission-control/src-tauri/: Cargo.toml  tauri.conf.json
mission-control/src-tauri/src/: main.rs
missions/: blog-post-1500.json  blog-post-500.json  competitor-analysis-basic.json  competitor-analysis-pro.json  data-scrape-basic.json  data-scrape-pro.json  email-outreach-basic.json  email-outreach-pro.json  landing-page-basic.json  landing-page-pro.json  lead-list-50.json  reputation-audit.json  reputation-monthly.json  seo-audit-basic.json  seo-audit-pro.json  social-media-weekly.json  whatsapp-setup.json
mobile_app/: App.tsx  package-lock.json  package.json
modules/athena/: lean_worker.py  transpiler_worker.py
modules/evolution/: config.yaml  evolution_agent.py  genesis.py  genesis_local.py  local_code_janitor.py  sandbox.py
modules/memory/: graph_store.py  vector_store.py
modules/observability/: langwatch_tracer.py
modules/offensive/: model_decensor.py
modules/other/: plant_monitor.py  trading.py
modules/p2p/: mesh.py  protocol.py
modules/pentagi/: __init__.py  client.py  sync.py  (+1 more)
p2p/: crypto.py  peers.json
persona_service/: main.py
planner_service/: __init__.py  main.py  prompts.py
policy_engine/: main.py
project/: requirements.txt
public/: index.html  setup.sh
queue_service/: main.py
scripts/: create_zero_day_vault.py  verify_install.py
sdr_intelligence_service/: main.py
skills/: adversarial_prompt_crafter.py  agent_competition.py  binary_analyzer.py  code_mutator.py  code_synthesis.py  command_and_control.py  compiler_bridge.py  container_escape.py  continuous_monitor.py  dataset_curator.py  dead_man_switch.py  dependency_mapper.py  design_flaw_detector.py  disassembler.py  encryption_tools.py  evasion_engine.py  exploit_dev.py  fine_tune_helper.py  forensics_collector.py  fuzzer.py  hypothesis_generator.py  hypothesis_tester.py  iac_scanner.py  kernel_exploit.py  knowledge_extractor.py  learning_loop.py  logic_solver.py  memory_architect.py  memory_editor.py  memory_forensics.py  model_prober.py  model_psychologist.py  model_trainer.py  model_vulnerability_scanner.py  multi_agent_coordinator.py  multi_backend.py  network_pivot.py  network_probe.py  neuroevolution.py  opsec_evaluator.py  (+20 more)
state_store/: main.py
telemetry_service/: main.py
templates/: config.default.json  invoice.html
(+264 files in other folders)
