[project]
name = "omniclaw"
version = "2.0.0"
description = "A distributed autonomous cognition and orchestration platform"
requires-python = ">=3.12"
dependencies = [
    "temporalio>=1.5.0",
    "nats-py>=2.6.0",
    "redis>=5.0.1",
    "sqlalchemy>=2.0.0",
    "asyncpg>=0.29.0",
    "psycopg2-binary>=2.9.9",
    "opentelemetry-api>=1.22.0",
    "opentelemetry-sdk>=1.22.0",
    "opentelemetry-exporter-otlp>=1.22.0",
    "opentelemetry-instrumentation-fastapi>=0.43b0",
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "langchain>=0.1.0",
    "litellm>=1.0.0",
    "playwright>=1.40.0",
    "pyrtlsdr>=0.2.9",
    "numpy>=1.26.0",
    "scipy>=1.11.0",
    "torch>=2.1.0",
    "pyyaml>=6.0",
    "aiohttp>=3.9.0",
    "click>=8.1.0",
]

[tool.mypy]
explicit_package_bases = true
ignore_missing_imports = true
strict = true
exclude = [
  "legacy/",
  ".venv/",
  "node_modules/",
  ".git/",
  "build/",
  "engines/",
  "apps/",
  "skills/",
  "project/",
  "packages/",
]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "S"]

[tool.ruff.lint.per-file-ignores]
# Pre-existing code — intentional research agent patterns
"core/advanced_features/*" = ["E501", "E722", "S110", "S311", "S108", "S324", "S104", "S112", "S605", "S608"]
"core/red_team/*" = ["E501", "E722", "S110", "S108", "S104", "S311"]
"core/automation/*" = ["E722", "S110", "S311", "S605"]
"core/skills/wifi_recon.py" = ["S603", "S607"]
"core/skills/osint_reputation.py" = ["S113", "S501"]
"core/skills/__init__.py" = ["E402"]
"omniclaw_advanced_features/*" = ["E501", "E722", "S110", "S311", "S108", "S324", "S104", "S112", "S605", "S608"]
"skills/*" = ["E501", "S102", "S104", "S107", "S108", "S110", "S112", "S311", "S324", "S602", "S603", "S605", "S606", "S607", "S608"]
"planner_service/*" = ["E501", "S110", "S603"]
"persona_service/*" = ["E501"]
"modules/*" = ["E501", "E722", "S108", "S110", "S311", "S603", "S607", "S605", "S104", "S112", "S602"]
"engines/*" = ["E501", "E722", "S110", "S108", "S603", "S607", "E741", "N999"]
"connectors/*" = ["E722"]
"kernel_observer/*" = ["E501"]
"OmniClaw_Colab_Sandbox.ipynb" = ["E402", "E501", "E701", "E722", "S110", "S603", "W291"]
"omniclaw_mcp.py" = ["S603", "S607"]
"core/security/*" = ["E501", "E722", "S110", "S108", "S311", "S603", "S607", "S104", "N806"]
"core/health_server.py" = ["S104"]
"core/main.py" = ["S104"]
"core/memory.py" = ["S324", "S113", "E501"]
"core/manager.py" = ["S324"]
"core/orchestrator.py" = ["S324", "E501"]
"core/pattern_sentinel.py" = ["S324"]
"core/decision_archaeology.py" = ["S110", "S324"]
"core/evolution_agent.py" = ["S110", "S603"]
"core/scout_agent.py" = ["S603"]
"core/scheduler/cron.py" = ["E501"]
"core/llm_council.py" = ["E501"]
"core/intelligence/war_room.py" = ["E501"]
"core/api_pool.py" = ["E501"]
"core/arbitrator.py" = ["E501"]
"core/quantum_gateway.py" = ["E501"]
"core/autonomous_fix.py" = ["S110", "S602"]
"core/companion.py" = ["E501"]
"core/dashboard.py" = ["E501"]
"core/voice_wake.py" = ["S605"]
"core/context_mapper.py" = ["S110"]
"core/worker.py" = ["E501", "E722", "S110", "S602"]
"core/living_docs.py" = ["S112"]
"core/knowledge_graph.py" = ["E402"]
"core/skills/osint_sentiment.py" = ["E501"]
"agents/*" = ["E501"]
"modules/evolution/local_code_janitor.py" = ["S112"]
"modules/p2p/mesh.py" = ["S112"]
"modules/pentagi/client.py" = ["S501", "S107"]
"modules/scholar/exam_intelligence.py" = ["E402"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = []
norecursedirs = [".git", ".venv", "node_modules", "legacy", ".next"]

[project.scripts]
omniclaw-cli = "cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
